--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -32,5 +32,5 @@
         android:layout_below="@id/text_result_pinyin"
         android:layout_marginTop="20dp"
         android:text="@string/random_generate"
-        android:textSize="20dp"/>
+        android:textSize="20sp"/>
 </RelativeLayout>
