--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,10 +24,10 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginBottom">10dp</item>
         <item name="android:gravity">center</item>
-        <item name="android:textSize">60dp</item>
+        <item name="android:textSize">60sp</item>
     </style>
 
     <style name="Text.Result.Pinyin">
-        <item name="android:textSize">40dp</item>
+        <item name="android:textSize">40sp</item>
     </style>
 </resources>
