--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,6 +24,9 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginBottom">10dp</item>
         <item name="android:gravity">center</item>
+    </style>
+
+    <style name="Text.Result.Name">
         <item name="android:textSize">70sp</item>
     </style>
 
